--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "lucide-react": "^0.525.0",
     "nodemailer": "^7.0.5",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
