--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "chart.js": "^4.5.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
@@ -16,6 +17,7 @@
     "nodemailer": "^7.0.5",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
+    "react-chartjs-2": "^5.3.0",
     "react-circular-progressbar": "^2.2.0",
     "react-dom": "^17.0.2",
     "react-github-calendar": "^3.2.2",
